# register-rs

./: .gitignore  Cargo.toml  README.md
ideation/: a-interface.rs  b-expanded.rs
register-rs-derive/: Cargo.toml
register-rs-derive/src/: background.rs  lib.rs  reciprocal_enum.rs
src/: lib.rs  main.rs
