[package]
name = "register-rs"
description = "A framework for building ergonomic embedded drivers"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/0xA54/register-rs"
license = "MIT"
keywords = ["embedded"]

[dependencies]
register-rs-derive = { path = "register-rs-derive" }
# intbits = "0.2.0"

[features]
defmt_3 = []
nightly = []